services/hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: services
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  rules:
    - host: hass.agate.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 8193
